--- a/css/main.css
+++ b/css/main.css
@@ -469,3 +469,27 @@ line-height: 32px;
   width: 80px;
   height: 80px;
 }
+
+
+/*-------Medlemmemsside----------*/
+
+.member-profile-pic-container {
+  width: 50%;
+}
+
+.member-img {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 100%;
+  height: 155px;
+  border: 1px solid #003253;
+}
+
+.parti-img {
+  height: 56px;
+  width: 56px;
+  border-radius: 56px;
+  border: 1px solid #003253;
+  padding: -8px;
+  margin-left: -60px;
+}
