--- a/css/main.css
+++ b/css/main.css
@@ -435,6 +435,7 @@ height: 96px;
   border-radius: 4px;
   margin-top: 16px;
   width: 100%;
+  cursor: pointer;
 }
 
 .poltiker-kort-titel-logo img {
@@ -473,8 +474,17 @@ line-height: 32px;
 
 /*-------Medlemmemsside----------*/
 
-.member-profile-pic-container {
+.member-profile-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+}
+
+.member-profile-pic {
   width: 50%;
+  display: flex;
+  filter: drop-shadow(0px 17px 50px rgba(0, 0, 0, 0.1)) drop-shadow(0px 12px 10px rgba(0, 0, 0, 0.1));
 }
 
 .member-img {
@@ -490,6 +500,30 @@ line-height: 32px;
   width: 56px;
   border-radius: 56px;
   border: 1px solid #003253;
-  padding: -8px;
-  margin-left: -60px;
+  align-self: flex-end;
+  margin-left: -56px;
+}
+
+.member-profile-titles {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.member-profile-titles-text {
+  padding-top: 24px;
+}
+
+.abonner-btn {
+  background: #0D873E;
+border-radius: 4px;
+border: none;
+padding: 0 12px;
+color: var(--white);
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 24px;
+cursor: pointer;
 }
