--- a/css/main.css
+++ b/css/main.css
@@ -474,6 +474,8 @@ line-height: 32px;
 
 /*-------Medlemmemsside----------*/
 
+
+
 .member-profile-container {
   width: 100%;
   display: flex;
@@ -526,4 +528,34 @@ font-weight: 700;
 font-size: 14px;
 line-height: 24px;
 cursor: pointer;
+}
+
+.accordions-container {
+  margin-top: 32px;
+}
+
+.accordion {
+  background-color: var(--white);
+  color: var(--darkblue);
+  border-radius: 4px;
+  border: 1px solid #003253;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: var(--white); 
+}
+
+.panel {
+  padding: 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
 }
