--- a/css/main.css
+++ b/css/main.css
@@ -537,25 +537,64 @@ cursor: pointer;
 .accordion {
   background-color: var(--white);
   color: var(--darkblue);
-  border-radius: 4px;
-  border: 1px solid #003253;
   cursor: pointer;
-  padding: 18px;
+  padding: 8px;
   width: 100%;
-  border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-style: normal;
+  border: none;
+font-weight: 600;
+font-size: 14px;
+line-height: 24px;
   transition: 0.4s;
+  border-radius: 4px;
+}
+
+.accordion-item {
+  width: 100%;
+  margin-bottom: 8px;
+  border: 1px solid #003253;
+  border-radius: 4px;
 }
 
 .active, .accordion:hover {
   background-color: var(--white); 
 }
 
+.accordion:after {
+  font-family: "Material Icons";
+  content: "add";
+  color: var(--darkblue);
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  font-family: "Material Icons";
+  content: "remove";
+}
 .panel {
-  padding: 18px;
   display: none;
   background-color: white;
   overflow: hidden;
+}
+
+.panel-item {
+  padding-left: 16px;
+  padding-right: 8px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.panel-item-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
