--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,10 @@ header img {
   flex-direction: row;
   align-items: center;
   height: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
+  font-weight: 400;
+font-size: 12px;
+line-height: 16px;
 }
 
 .input-container {
@@ -484,7 +487,8 @@ line-height: 32px;
 }
 
 .member-profile-pic {
-  width: 50%;
+  width: 155px;
+  height: 155px;
   display: flex;
   filter: drop-shadow(0px 17px 50px rgba(0, 0, 0, 0.1)) drop-shadow(0px 12px 10px rgba(0, 0, 0, 0.1));
 }
@@ -513,8 +517,23 @@ line-height: 32px;
   justify-content: space-between;
 }
 
+.member-profile-name {
+  font-family: var(--header-font);
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 700;
+}
+
 .member-profile-titles-text {
-  padding-top: 24px;
+  padding-top: 25%;
+}
+
+.member-bio {
+  margin-top: 32px;
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
 }
 
 .abonner-btn {
@@ -597,4 +616,68 @@ line-height: 24px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.container a {
+  padding: 30px;
+  background: teal;
+  color: #fff;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.modal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal.open {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
+.modal-bg {
+  position: absolute;
+  background: teal;
+  width: 100%;
+  height: 100%;
+}
+.modal-container {
+  border-radius: 10px;
+  background: #fff;
+  position: relative;
+  padding: 30px;
+}
+.modal-close {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  outline: none;
+  appearance: none;
+  color: red;
+  background: none;
+  border: 0px;
+  font-weight: bold;
+  cursor: pointer;
 }
