--- a/css/main.css
+++ b/css/main.css
@@ -238,22 +238,26 @@ line-height: 16px;
 
 #filterParti {
   width: 100%;
+  height: 40px;
   font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 20px;
+background-color: var(--white);
 }
 
 #filterUdvalg {
   width: 100%;
+  height: 40px;
   font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 20px;
+background-color: var(--white);
 }
 
 select {
-  display: flex;
+display: flex;
 flex-direction: row;
 align-items: center;
 padding: 8px;
@@ -268,15 +272,20 @@ border-radius: 4px;
 border-radius: 4px;
 height: 40px;
 width: 100%;
-padding: 8px;
+margin-top: 4px;
 }
 
 input::placeholder {
   font-style: normal;
-font-weight: 700;
+font-weight: 400;
 font-size: 14px;
 line-height: 18px;
 padding-left: 8px;
+}
+
+input {
+  font-size: 16px !important;
+  padding-left: 8px;
 }
 
 /*--------------Forsiden----------*/ 
@@ -367,7 +376,7 @@ text-align: center;
   background-size: cover;
   border: 1px solid #003253;
 border-radius: 4px;
-width: 144px;
+width: 9rem;
 height: 96px;
 display: flex;
 flex-direction: column;
@@ -436,7 +445,6 @@ height: 96px;
 .politiker-kort {
   border: 1px solid #003253;
   border-radius: 4px;
-  margin-top: 16px;
   width: 100%;
   cursor: pointer;
 }
@@ -474,6 +482,16 @@ line-height: 32px;
   height: 80px;
 }
 
+#medlemmer-container {
+  margin-top: 16px;
+  font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 24px;
+display: flex;
+flex-direction: column;
+gap: 8px;
+}
 
 /*-------Medlemmemsside----------*/
 
