--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   --greybg: #F1F2F5;
   --darkblue: #003253;
   --blue: #007ACA;
-  --red: #F01245;
+  --red: #E50B45;
   --white: #fff;
   --main-font: 'Open Sans', sans-serif;
   --header-font: 'Ubuntu', sans-serif;
@@ -48,15 +48,8 @@ h1 {
 }
 
 h2 {
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: 600;
-  font-size: 2.5em;
-  line-height: 50px;
-  color: var(--blue);
-  padding-top: 50px;
-  margin-bottom: 50px;
-  letter-spacing: 0.05em;
+  font-weight: 400;
+  margin: 0.5em 0 0.2em;
 }
 
 h3 {
@@ -104,7 +97,7 @@ line-height: 16px;
   font-family: var(--main-font);
   font-style: normal;
 font-weight: 400;
-font-size: 10px;
+font-size: 12px;
 line-height: 12px;
 }
 
@@ -410,8 +403,8 @@ border-radius: 4px;
 font-family: var(--main-font);
 font-style: normal;
 font-weight: 400;
-font-size: 10px;
-line-height: 10px;
+font-size: 12px;
+line-height: 12px;
 }
 
 .video-tag-container {
@@ -444,10 +437,16 @@ height: 96px;
 /*-------Medlemmer----------*/
 .politiker-kort {
   border: 1px solid #003253;
-  border-radius: 4px;
+filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.1)) drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.1));
+border-radius: 4px;
   width: 100%;
   cursor: pointer;
 }
+
+.poltiker-img {
+  margin-bottom: -5px;
+}
+
 
 .poltiker-kort-titel-logo img {
   width: 80px;
@@ -490,7 +489,7 @@ font-size: 18px;
 line-height: 24px;
 display: flex;
 flex-direction: column;
-gap: 8px;
+gap: 24px;
 }
 
 /*-------Medlemmemsside----------*/
