--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,8 @@ input {
 
 .main-container {
   padding: 72px 24px 24px 24px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .title h1 {
@@ -334,9 +336,7 @@ line-height: 16px;
 text-align: center;
 }
 
-.video-section {
-  margin-bottom: 32px;
-}
+
 
 .video-section-titel {
   display: flex;
@@ -356,10 +356,18 @@ text-align: center;
     overflow-y: hidden;
     white-space: nowrap;
     width: auto;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
   width: auto;
+}
+
+.video-kort-forside {
+  display: flex;
+  flex-direction: column;
+  height: 120px;
+  width: 143px;
 }
 
 .video-kort {
@@ -369,8 +377,8 @@ text-align: center;
   background-size: cover;
   border: 1px solid #003253;
 border-radius: 4px;
-width: 9rem;
-height: 96px;
+width: 100%;
+height: 100%;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
@@ -459,12 +467,12 @@ border-radius: 4px;
   background-color: var(--white);
   display: flex;
   justify-content: space-between;
+  border-radius: 0 0 4px 4px;
 }
 
 .politiker-kort-tekst {
   padding-bottom: 16px;
   padding-left: 24px;
-  background-color: var(--white);
   width: max-content;
 }
 
