--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,7 @@ line-height: 24px;
   display: none;
   background-color: white;
   overflow: hidden;
+  border-radius: 4px;
 }
 
 .panel-item {
@@ -644,65 +645,40 @@ line-height: 24px;
 }
 
 
-* {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+.some-channels-container {
+  margin-top: 32px;
 }
-.container {
+
+.some-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 8px;
+  background-color: var(--white);
+  border-radius: 4px;
 }
-.container a {
-  padding: 30px;
-  background: teal;
-  color: #fff;
-  font-weight: bold;
-  font-size: 24px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-.modal {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s ease;
-  top: 0;
-  left: 0;
+
+.member-some-content {
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.member-some-img {
+  border: 1px solid #003253;
+}
+
+.member-some-tekst-container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
 }
-.modal.open {
-  visibility: visible;
-  opacity: 1;
-  transition-delay: 0s;
-}
-.modal-bg {
-  position: absolute;
-  background: teal;
-  width: 100%;
+
+.some-container img {
+  width: 32px;
   height: 100%;
-}
-.modal-container {
-  border-radius: 10px;
-  background: #fff;
-  position: relative;
-  padding: 30px;
-}
-.modal-close {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  outline: none;
-  appearance: none;
-  color: red;
-  background: none;
-  border: 0px;
-  font-weight: bold;
-  cursor: pointer;
+  object-fit: cover;
+  display: flex;
+  align-self: center;
 }
